8288396: Always create reproducible builds